@@ -29,15 +29,9 @@ the GNU MP Library test suite.  If not, see https://www.gnu.org/licenses/.  */
 #include <float.h>      /* for DBL_MANT_DIG */
 #endif
 
-#if TIME_WITH_SYS_TIME
+#include <time.h>
+#if HAVE_SYS_TIME_H
 # include <sys/time.h>  /* for struct timeval */
-# include <time.h>
-#else
-# if HAVE_SYS_TIME_H
-#  include <sys/time.h>
-# else
-#  include <time.h>
-# endif
 #endif
 
 #include "gmp-impl.h"
